# passman_rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  constants.rs  credential.rs  main.rs  main_test.rs  utils.rs  vault.rs
