[package]
name = "passman_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
rand = "0.8.5"
chrono = "0.4.35"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
aes-gcm-siv = "0.11.1"
clearscreen = "2.0.1"
cli-table = "0.4.7"
